Worker as testing task.